<resources>
    <string name="app_name">My Application1234</string>
    <string name="btn_calc">ثبت فاکتور</string>
    <string name="btn_add_product">افزودن محصول</string>
    <string name="btn_product_list">لیست محصولات</string>
    <string name="btn_add_category">افزودن دسته بندی</string>
    <string name="input_category">افزودن دسته بندی</string>
    <string name="add_factor">تایید فاکتور</string>
    <string name="input_product_name">نام محصول</string>
    <string name="input_product_price">قیمت محصول</string>
    <string name="input_product_num">به ازای هر تعداد/گرم</string>
    <string name="product_name">نام محصول : </string>
    <string name="category">دسته بندی : </string>
    <string name="price">قیمت : </string>
    <string name="num">نسبت : </string>
    <string name="edit">ویرایش </string>
    <string name="delete">حذف </string>
    <string name="add_customer">افزودن </string>
    <string name="price2">مقدار </string>
    <string name="btn_all_factors">مشاهده فاکتورها </string>


</resources>