<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".edit_product_activity">

    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/spinner_cat3"
        android:textAlignment="center"
        android:layout_height="wrap_content">
    </Spinner>
    <EditText
        android:layout_width="240dp"
        android:id="@+id/p_name2"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:hint="@string/input_product_name"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="240dp"
        android:id="@+id/p_price2"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/input_product_price"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="240dp"
        android:id="@+id/p_num2"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/input_product_num"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btn_edit_product2"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btn_delete_product"
        android:layout_height="wrap_content"/>

</LinearLayout>
