<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="200dp"
            android:id="@+id/btn1"
            android:textColor="@color/black"
            android:text="@string/btn_calc"
            android:backgroundTint="@color/color2"
            android:layout_height="70dp"/>
        <Button
            android:layout_width="200dp"
            android:id="@+id/btn2"
            android:backgroundTint="@color/color2"
            android:textColor="@color/black"
            android:text="@string/btn_add_product"
            android:layout_height="70dp"/>
        <Button
            android:layout_width="200dp"
            android:id="@+id/btn3"
            android:backgroundTint="@color/color2"
            android:textColor="@color/black"
            android:text="@string/btn_product_list"
            android:layout_height="70dp"/>
        <Button
            android:layout_width="200dp"
            android:id="@+id/btn4"
            android:backgroundTint="@color/color2"
            android:textColor="@color/black"
            android:text="@string/btn_add_category"
            android:layout_height="70dp"/>
        <Button
            android:layout_width="200dp"
            android:id="@+id/btn5"
            android:backgroundTint="@color/color2"
            android:textColor="@color/black"
            android:text="@string/btn_all_factors"
            android:layout_height="70dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>