<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".products_list_activity"
    android:id="@+id/linear"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:gravity="right"
    android:layoutDirection="rtl"
    android:layout_marginTop="20dp"
    android:background="#B4D4EA"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/product_name"
            android:layout_height="wrap_content"
            android:text="@string/input_product_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/product_c_name"
            android:layout_height="wrap_content"
            android:text="@string/input_product_name"
            />
    </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/product_price"
            android:layout_height="wrap_content"
            android:text="@string/input_product_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/product_num"
            android:layout_height="wrap_content"
            android:text="@string/input_product_name"
            />

    </LinearLayout>>

</LinearLayout>