<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".New_factor">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinner_cat"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <Spinner
            android:layout_marginTop="20dp"
            android:id="@+id/spinner_pr"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <EditText
            android:layout_width="100dp"
            android:inputType="number"
            android:id="@+id/q_edit"
            android:hint="@string/price2"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_height="wrap_content"/>
            <ListView
                android:layout_width="match_parent"
                android:id="@+id/factor"
                android:layout_height="200dp"/>

    </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_new_p"
            android:text="@string/add_customer"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finish_factor"
            android:text="@string/add_factor"/>

</LinearLayout>